[project]
name = "all-about-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.4",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-mongodb>=0.6.2",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.20",
    "pypdf>=5.5.0",
]
